[gd_scene load_steps=5 format=3 uid="uid://bgu56l5reo6gf"]

[ext_resource type="Script" path="res://entities/player_new.gd" id="1_klod7"]
[ext_resource type="Script" path="res://entities/endpoint.gd" id="3_lbb20"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w0ucl"]
size = Vector2(50, 60)

[sub_resource type="CircleShape2D" id="CircleShape2D_ih5u3"]
radius = 15.0

[node name="PlayerNew" type="RigidBody2D"]
collision_mask = 12
continuous_cd = 2
max_contacts_reported = 2
contact_monitor = true
lock_rotation = true
freeze_mode = 1
script = ExtResource("1_klod7")

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_w0ucl")

[node name="LeftLegCheck" type="RayCast2D" parent="."]
position = Vector2(-25, 30)
target_position = Vector2(-50, 50)
collision_mask = 8
hit_from_inside = true

[node name="LeftArmCheck" type="RayCast2D" parent="."]
position = Vector2(-25, -30)
target_position = Vector2(-50, -50)
collision_mask = 8
hit_from_inside = true

[node name="RightLegCheck" type="RayCast2D" parent="."]
position = Vector2(25, 30)
target_position = Vector2(50, 50)
collision_mask = 8
hit_from_inside = true

[node name="RightArmCheck" type="RayCast2D" parent="."]
position = Vector2(25, -30)
target_position = Vector2(50, -50)
collision_mask = 8
hit_from_inside = true

[node name="RightHand" type="CollisionShape2D" parent="."]
position = Vector2(75, -80)
shape = SubResource("CircleShape2D_ih5u3")
script = ExtResource("3_lbb20")

[node name="LeftFoot" type="CollisionShape2D" parent="."]
position = Vector2(-75, 80)
shape = SubResource("CircleShape2D_ih5u3")
script = ExtResource("3_lbb20")
type = "foot"

[node name="RightFoot" type="CollisionShape2D" parent="."]
position = Vector2(75, 80)
shape = SubResource("CircleShape2D_ih5u3")
script = ExtResource("3_lbb20")
type = "foot"

[node name="LeftHand" type="CollisionShape2D" parent="."]
position = Vector2(-75, -80)
shape = SubResource("CircleShape2D_ih5u3")
script = ExtResource("3_lbb20")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[connection signal="grab" from="." to="." method="_on_grab"]
